bumped guava version and added missing compiler exports